[gd_scene load_steps=10 format=2]

[ext_resource path="res://Red/scripts/ChestArea.gd" type="Script" id=1]
[ext_resource path="res://Red/source/Textura_bau.png" type="Texture" id=2]
[ext_resource path="res://Red/source/Bau.obj" type="ArrayMesh" id=3]
[ext_resource path="res://Red/scenes/Lanterna.tscn" type="PackedScene" id=4]
[ext_resource path="res://Red/source/audio/chest.wav" type="AudioStream" id=5]

[sub_resource type="SpatialMaterial" id=1]
albedo_texture = ExtResource( 2 )

[sub_resource type="ConcavePolygonShape" id=2]
data = PoolVector3Array( 1.5202, 1.772, 0.0038, 1.5202, 0.8542, 0.0011, 1.5202, 1.715, 0.4606, 1.5202, 1.715, 0.4606, 1.5202, 0.8542, 0.0011, 1.5202, 0.8542, 0.4606, 1.5202, 1.5183, 0.7455, 1.5202, 0.8542, 0.7455, 1.5202, 1.1848, 0.9205, 1.5202, 1.1848, 0.9205, 1.5202, 0.8542, 0.7455, 1.5202, 0.8542, 0.9205, 1.5202, 1.715, -0.4583, 1.5202, 0.8542, -0.4583, 1.5202, 1.772, 0.0038, 1.5202, 1.772, 0.0038, 1.5202, 0.8542, -0.4583, 1.5202, 0.8542, 0.0011, 1.5202, 1.5183, -0.7433, 1.5202, 0.8542, -0.7433, 1.5202, 1.715, -0.4583, 1.5202, 1.715, -0.4583, 1.5202, 0.8542, -0.7433, 1.5202, 0.8542, -0.4583, 1.5202, 1.1848, -0.9182, 1.5202, 0.8542, -0.9182, 1.5202, 1.5183, -0.7433, 1.5202, 1.5183, -0.7433, 1.5202, 0.8542, -0.9182, 1.5202, 0.8542, -0.7433, 1.5202, 1.715, 0.4606, 1.5202, 0.8542, 0.4606, 1.5202, 1.5183, 0.7455, 1.5202, 1.5183, 0.7455, 1.5202, 0.8542, 0.4606, 1.5202, 0.8542, 0.7455, 1.5829, 1.5495, -0.8094, 1.5829, 1.1757, -0.9815, 1.5829, 1.4934, -0.7485, 1.5829, 1.4934, -0.7485, 1.5829, 1.1757, -0.9815, 1.5829, 1.182, -0.91, 1.5829, 1.1757, 0.9837, 1.5829, 1.5495, 0.7967, 1.5829, 1.1768, 0.9023, 1.5829, 1.1768, 0.9023, 1.5829, 1.5495, 0.7967, 1.5829, 1.5176, 0.7329, 1.5857, 0.7999, 0.9837, 1.5829, 1.1705, 0.9837, 1.5857, 0.7999, 0.9124, 1.5857, 0.7999, 0.9124, 1.5829, 1.1705, 0.9837, 1.5829, 1.1705, 0.9124, 1.5829, 1.5453, 0.7918, 1.5829, 1.7639, 0.4922, 1.5829, 1.5247, 0.7263, 1.5829, 1.5247, 0.7263, 1.5829, 1.7639, 0.4922, 1.5829, 1.6968, 0.4877, 1.5829, 1.77, -0.4899, 1.5829, 1.5541, -0.8006, 1.5829, 1.7083, -0.4659, 1.5829, 1.7083, -0.4659, 1.5829, 1.5541, -0.8006, 1.5829, 1.5163, -0.7437, 1.5829, 1.771, 0.4879, 1.5829, 1.8339, 0.0038, 1.5829, 1.6977, 0.4866, 1.5829, 1.6977, 0.4866, 1.5829, 1.8339, 0.0038, 1.5829, 1.7657, 0.0046, 1.5829, 1.1757, -0.9815, 1.5921, 0.8051, -0.9815, 1.5829, 1.1757, -0.9101, 1.5829, 1.1757, -0.9101, 1.5921, 0.8051, -0.9815, 1.5921, 0.8051, -0.9101, 0.125, 0.964, 0.8761, 0.1734, 0.8746, 0.8761, 0.125, 0.964, 1.0152, 0.125, 0.964, 1.0152, 0.1734, 0.8746, 0.8761, 0.1734, 0.8746, 1.0152, 0.0933, 0.5497, 0.8761, 0, 0.5497, 0.8761, 0.0933, 0.5497, 1.0152, 0.0933, 0.5497, 1.0152, 0, 0.5497, 0.8761, 0, 0.5497, 1.0152, 0.1734, 0.8746, 0.8761, 0.0933, 0.5497, 0.8761, 0.1734, 0.8746, 1.0152, 0.1734, 0.8746, 1.0152, 0.0933, 0.5497, 0.8761, 0.0933, 0.5497, 1.0152, 0, 0.9859, 0.8761, 0.125, 0.964, 0.8761, 0, 0.9859, 1.0152, 0, 0.9859, 1.0152, 0.125, 0.964, 0.8761, 0.125, 0.964, 1.0152, 0.125, 0.964, 1.0152, 0.1734, 0.8746, 1.0152, 0, 0.9859, 1.0152, 0, 0.9859, 1.0152, 0.1734, 0.8746, 1.0152, 0, 0.8746, 1.0152, 0.1734, 0.8746, 1.0152, 0.0933, 0.5497, 1.0152, 0, 0.8746, 1.0152, 0, 0.8746, 1.0152, 0.0933, 0.5497, 1.0152, 0, 0.5497, 1.0152, 0.051, 0.7848, 1.0084, 0.051, 1.1774, 1.0017, 0.0504, 0.7909, 0.9074, 0.0504, 0.7909, 0.9074, 0.051, 1.1774, 1.0017, 0.0504, 1.1559, 0.8996, 0.051, 1.5578, 0.8106, 0.051, 1.7839, 0.4998, 0.0504, 1.4941, 0.7247, 0.0504, 1.4941, 0.7247, 0.051, 1.7839, 0.4998, 0.0504, 1.6935, 0.4592, 0.051, 1.561, -0.8156, 0.051, 1.1864, -1.0025, 0.0504, 1.5091, -0.739, 0.0504, 1.5091, -0.739, 0.051, 1.1864, -1.0025, 0.0504, 1.1685, -0.9015, 0.051, 1.8493, -0.0001, 0.051, 1.7908, -0.4972, 0.0504, 1.7537, -0.0013, 0.0504, 1.7537, -0.0013, 0.051, 1.7908, -0.4972, 0.0504, 1.7069, -0.4492, 0.051, 1.1864, -1.0025, 0.051, 0.7957, -1.0006, 0.0504, 1.1685, -0.9015, 0.0504, 1.1685, -0.9015, 0.051, 0.7957, -1.0006, 0.0504, 0.8026, -0.8997, 0.051, 1.1774, 1.0017, 0.051, 1.5578, 0.8106, 0.0504, 1.1559, 0.8996, 0.0504, 1.1559, 0.8996, 0.051, 1.5578, 0.8106, 0.0504, 1.4941, 0.7247, 0.051, 1.7839, 0.4998, 0.051, 1.8493, -0.0001, 0.0504, 1.6935, 0.4592, 0.0504, 1.6935, 0.4592, 0.051, 1.8493, -0.0001, 0.0504, 1.7537, -0.0013, 0.051, 1.7908, -0.4972, 0.051, 1.561, -0.8156, 0.0504, 1.7069, -0.4492, 0.0504, 1.7069, -0.4492, 0.051, 1.561, -0.8156, 0.0504, 1.5091, -0.739, 0.8808, 1.1886, -0.9916, 0.8037, 1.1886, -0.9916, 0.8808, 0.8022, -0.9897, 0.8808, 0.8022, -0.9897, 0.8037, 1.1886, -0.9916, 0.8037, 0.8022, -0.9897, 0.8808, 1.7796, 0.4943, 0.8037, 1.7796, 0.4943, 0.8808, 1.8443, -0.0001, 0.8808, 1.8443, -0.0001, 0.8037, 1.7796, 0.4943, 0.8037, 1.8443, -0.0001, 0.8808, 1.5559, 0.8018, 0.8037, 1.5559, 0.8018, 0.8808, 1.7796, 0.4943, 0.8808, 1.7796, 0.4943, 0.8037, 1.5559, 0.8018, 0.8037, 1.7796, 0.4943, 0.8808, 1.1797, 0.9908, 0.8037, 1.1797, 0.9908, 0.8808, 1.5559, 0.8018, 0.8808, 1.5559, 0.8018, 0.8037, 1.1797, 0.9908, 0.8037, 1.5559, 0.8018, 0.8808, 0.7914, 0.9974, 0.8037, 0.7914, 0.9974, 0.8808, 1.1797, 0.9908, 0.8808, 1.1797, 0.9908, 0.8037, 0.7914, 0.9974, 0.8037, 1.1797, 0.9908, 0.8808, 1.8443, -0.0001, 0.8037, 1.8443, -0.0001, 0.8808, 1.7864, -0.4918, 0.8808, 1.7864, -0.4918, 0.8037, 1.8443, -0.0001, 0.8037, 1.7864, -0.4918, 0.8808, 1.7864, -0.4918, 0.8037, 1.7864, -0.4918, 0.8808, 1.5591, -0.8067, 0.8808, 1.5591, -0.8067, 0.8037, 1.7864, -0.4918, 0.8037, 1.5591, -0.8067, 0.8808, 1.5591, -0.8067, 0.8037, 1.5591, -0.8067, 0.8808, 1.1886, -0.9916, 0.8808, 1.1886, -0.9916, 0.8037, 1.5591, -0.8067, 0.8037, 1.1886, -0.9916, 0.8808, 0.8022, -0.9897, 0.8037, 0.8022, -0.9897, 0.8808, 0.8026, -0.8997, 0.8808, 0.8026, -0.8997, 0.8037, 0.8022, -0.9897, 0.8037, 0.8026, -0.8997, 0.8037, 1.5591, -0.8067, 0.8037, 1.7864, -0.4918, 0.8037, 1.5091, -0.739, 0.8037, 1.5091, -0.739, 0.8037, 1.7864, -0.4918, 0.8037, 1.7069, -0.4492, 0.8808, 0.7914, 0.9974, 0.8808, 1.1797, 0.9908, 0.8808, 0.7909, 0.9074, 0.8808, 0.7909, 0.9074, 0.8808, 1.1797, 0.9908, 0.8808, 1.1559, 0.8996, 0.8037, 0.8022, -0.9897, 0.8037, 1.1886, -0.9916, 0.8037, 0.8026, -0.8997, 0.8037, 0.8026, -0.8997, 0.8037, 1.1886, -0.9916, 0.8037, 1.1685, -0.9015, 0.8037, 1.1797, 0.9908, 0.8037, 0.7914, 0.9974, 0.8037, 1.1559, 0.8996, 0.8037, 1.1559, 0.8996, 0.8037, 0.7914, 0.9974, 0.8037, 0.7909, 0.9074, 0.8808, 1.5559, 0.8018, 0.8808, 1.7796, 0.4943, 0.8808, 1.4941, 0.7247, 0.8808, 1.4941, 0.7247, 0.8808, 1.7796, 0.4943, 0.8808, 1.6935, 0.4592, 0.8808, 1.5591, -0.8067, 0.8808, 1.1886, -0.9916, 0.8808, 1.5091, -0.739, 0.8808, 1.5091, -0.739, 0.8808, 1.1886, -0.9916, 0.8808, 1.1685, -0.9015, 0.8037, 1.7796, 0.4943, 0.8037, 1.5559, 0.8018, 0.8037, 1.6935, 0.4592, 0.8037, 1.6935, 0.4592, 0.8037, 1.5559, 0.8018, 0.8037, 1.4941, 0.7247, 0.8037, 1.1886, -0.9916, 0.8037, 1.5591, -0.8067, 0.8037, 1.1685, -0.9015, 0.8037, 1.1685, -0.9015, 0.8037, 1.5591, -0.8067, 0.8037, 1.5091, -0.739, 0.8037, 0.7914, 0.9974, 0.8808, 0.7914, 0.9974, 0.8037, 0.7909, 0.9074, 0.8037, 0.7909, 0.9074, 0.8808, 0.7914, 0.9974, 0.8808, 0.7909, 0.9074, 0.8808, 1.8443, -0.0001, 0.8808, 1.7864, -0.4918, 0.8808, 1.7537, -0.0013, 0.8808, 1.7537, -0.0013, 0.8808, 1.7864, -0.4918, 0.8808, 1.7069, -0.4492, 0.8808, 1.1886, -0.9916, 0.8808, 0.8022, -0.9897, 0.8808, 1.1685, -0.9015, 0.8808, 1.1685, -0.9015, 0.8808, 0.8022, -0.9897, 0.8808, 0.8026, -0.8997, 0.8037, 1.7864, -0.4918, 0.8037, 1.8443, -0.0001, 0.8037, 1.7069, -0.4492, 0.8037, 1.7069, -0.4492, 0.8037, 1.8443, -0.0001, 0.8037, 1.7537, -0.0013, 0.8808, 1.1797, 0.9908, 0.8808, 1.5559, 0.8018, 0.8808, 1.1559, 0.8996, 0.8808, 1.1559, 0.8996, 0.8808, 1.5559, 0.8018, 0.8808, 1.4941, 0.7247, 0.8808, 1.7796, 0.4943, 0.8808, 1.8443, -0.0001, 0.8808, 1.6935, 0.4592, 0.8808, 1.6935, 0.4592, 0.8808, 1.8443, -0.0001, 0.8808, 1.7537, -0.0013, 0.8037, 1.5559, 0.8018, 0.8037, 1.1797, 0.9908, 0.8037, 1.4941, 0.7247, 0.8037, 1.4941, 0.7247, 0.8037, 1.1797, 0.9908, 0.8037, 1.1559, 0.8996, 0.8037, 1.8443, -0.0001, 0.8037, 1.7796, 0.4943, 0.8037, 1.7537, -0.0013, 0.8037, 1.7537, -0.0013, 0.8037, 1.7796, 0.4943, 0.8037, 1.6935, 0.4592, 0.8808, 1.7864, -0.4918, 0.8808, 1.5591, -0.8067, 0.8808, 1.7069, -0.4492, 0.8808, 1.7069, -0.4492, 0.8808, 1.5591, -0.8067, 0.8808, 1.5091, -0.739, -1.5202, 0.8542, 0.4606, -1.5202, 0.8542, 0.0011, -1.5202, 1.715, 0.4606, -1.5202, 1.715, 0.4606, -1.5202, 0.8542, 0.0011, -1.5202, 1.772, 0.0038, -1.5202, 0.8542, 0.9205, -1.5202, 0.8542, 0.7455, -1.5202, 1.1848, 0.9205, -1.5202, 1.1848, 0.9205, -1.5202, 0.8542, 0.7455, -1.5202, 1.5183, 0.7455, -1.5202, 0.8542, 0.0011, -1.5202, 0.8542, -0.4583, -1.5202, 1.772, 0.0038, -1.5202, 1.772, 0.0038, -1.5202, 0.8542, -0.4583, -1.5202, 1.715, -0.4583, -1.5202, 0.8542, -0.4583, -1.5202, 0.8542, -0.7433, -1.5202, 1.715, -0.4583, -1.5202, 1.715, -0.4583, -1.5202, 0.8542, -0.7433, -1.5202, 1.5183, -0.7433, -1.5202, 0.8542, -0.7433, -1.5202, 0.8542, -0.9182, -1.5202, 1.5183, -0.7433, -1.5202, 1.5183, -0.7433, -1.5202, 0.8542, -0.9182, -1.5202, 1.1848, -0.9182, -1.5202, 0.8542, 0.7455, -1.5202, 0.8542, 0.4606, -1.5202, 1.5183, 0.7455, -1.5202, 1.5183, 0.7455, -1.5202, 0.8542, 0.4606, -1.5202, 1.715, 0.4606, -1.5829, 1.77, -0.4899, -1.5829, 1.5541, -0.8006, 1.5829, 1.77, -0.4899, 1.5829, 1.77, -0.4899, -1.5829, 1.5541, -0.8006, 1.5829, 1.5541, -0.8006, 1.5857, 0.7999, 0.9837, -1.5857, 0.7999, 0.9837, 1.5829, 1.1705, 0.9837, 1.5829, 1.1705, 0.9837, -1.5857, 0.7999, 0.9837, -1.5829, 1.1705, 0.9837, -1.5829, 1.1757, 0.9837, -1.5829, 1.5495, 0.7967, 1.5829, 1.1757, 0.9837, 1.5829, 1.1757, 0.9837, -1.5829, 1.5495, 0.7967, 1.5829, 1.5495, 0.7967, -1.5921, 0.8051, -0.9815, 1.5921, 0.8051, -0.9815, -1.5829, 1.1757, -0.9815, -1.5829, 1.1757, -0.9815, 1.5921, 0.8051, -0.9815, 1.5829, 1.1757, -0.9815, -1.5829, 1.8339, 0.0011, -1.5829, 1.7763, -0.491, 1.5829, 1.8339, 0.0011, 1.5829, 1.8339, 0.0011, -1.5829, 1.7763, -0.491, 1.5829, 1.7763, -0.491, -1.5829, 1.771, 0.4879, -1.5829, 1.8339, 0.0038, 1.5829, 1.771, 0.4879, 1.5829, 1.771, 0.4879, -1.5829, 1.8339, 0.0038, 1.5829, 1.8339, 0.0038, -1.5829, 1.5495, -0.8094, -1.5829, 1.1757, -0.9815, 1.5829, 1.5495, -0.8094, 1.5829, 1.5495, -0.8094, -1.5829, 1.1757, -0.9815, 1.5829, 1.1757, -0.9815, -1.5829, 1.5453, 0.7918, -1.5829, 1.7639, 0.4922, 1.5829, 1.5453, 0.7918, 1.5829, 1.5453, 0.7918, -1.5829, 1.7639, 0.4922, 1.5829, 1.7639, 0.4922, 1.5829, 1.5163, -0.7437, -1.5829, 1.5163, -0.7437, 1.5829, 1.7083, -0.4659, 1.5829, 1.7083, -0.4659, -1.5829, 1.5163, -0.7437, -1.5829, 1.7083, -0.4659, -1.5829, 1.1705, 0.9124, -1.5857, 0.7999, 0.9124, 1.5829, 1.1705, 0.9124, 1.5829, 1.1705, 0.9124, -1.5857, 0.7999, 0.9124, 1.5857, 0.7999, 0.9124, 1.5829, 1.5176, 0.7329, -1.5829, 1.5176, 0.7329, 1.5829, 1.1768, 0.9023, 1.5829, 1.1768, 0.9023, -1.5829, 1.5176, 0.7329, -1.5829, 1.1768, 0.9023, 1.5829, 1.1757, -0.9101, 1.5921, 0.8051, -0.9101, -1.5829, 1.1757, -0.9101, -1.5829, 1.1757, -0.9101, 1.5921, 0.8051, -0.9101, -1.5921, 0.8051, -0.9101, 1.5829, 1.7094, -0.4591, -1.5829, 1.7094, -0.4591, 1.5829, 1.7644, 0.0002, 1.5829, 1.7644, 0.0002, -1.5829, 1.7094, -0.4591, -1.5829, 1.7644, 0.0002, 1.5829, 1.7657, 0.0046, -1.5829, 1.7657, 0.0046, 1.5829, 1.6977, 0.4866, 1.5829, 1.6977, 0.4866, -1.5829, 1.7657, 0.0046, -1.5829, 1.6977, 0.4866, 1.5829, 1.182, -0.91, -1.5829, 1.182, -0.91, 1.5829, 1.4934, -0.7485, 1.5829, 1.4934, -0.7485, -1.5829, 1.182, -0.91, -1.5829, 1.4934, -0.7485, 1.5829, 1.6968, 0.4877, -1.5829, 1.6968, 0.4877, 1.5829, 1.5247, 0.7263, 1.5829, 1.5247, 0.7263, -1.5829, 1.6968, 0.4877, -1.5829, 1.5247, 0.7263, -1.5829, 1.5247, 0.7263, -1.5829, 1.5453, 0.7918, 1.5829, 1.5247, 0.7263, 1.5829, 1.5247, 0.7263, -1.5829, 1.5453, 0.7918, 1.5829, 1.5453, 0.7918, -1.5857, 0.7999, 0.9124, -1.5857, 0.7999, 0.9837, 1.5857, 0.7999, 0.9124, 1.5857, 0.7999, 0.9124, -1.5857, 0.7999, 0.9837, 1.5857, 0.7999, 0.9837, -1.5829, 1.7644, 0.0002, -1.5829, 1.8339, 0.0011, 1.5829, 1.7644, 0.0002, 1.5829, 1.7644, 0.0002, -1.5829, 1.8339, 0.0011, 1.5829, 1.8339, 0.0011, -1.5829, 1.182, -0.91, -1.5829, 1.1757, -0.9815, -1.5829, 1.4934, -0.7485, -1.5829, 1.4934, -0.7485, -1.5829, 1.1757, -0.9815, -1.5829, 1.5495, -0.8094, -1.5829, 1.5176, 0.7329, -1.5829, 1.5495, 0.7967, -1.5829, 1.1768, 0.9023, -1.5829, 1.1768, 0.9023, -1.5829, 1.5495, 0.7967, -1.5829, 1.1757, 0.9837, 1.5829, 1.5163, -0.7437, 1.5829, 1.5541, -0.8006, -1.5829, 1.5163, -0.7437, -1.5829, 1.5163, -0.7437, 1.5829, 1.5541, -0.8006, -1.5829, 1.5541, -0.8006, -1.5829, 1.1705, 0.9124, -1.5829, 1.1705, 0.9837, -1.5857, 0.7999, 0.9124, -1.5857, 0.7999, 0.9124, -1.5829, 1.1705, 0.9837, -1.5857, 0.7999, 0.9837, -1.5829, 1.6968, 0.4877, -1.5829, 1.7639, 0.4922, -1.5829, 1.5247, 0.7263, -1.5829, 1.5247, 0.7263, -1.5829, 1.7639, 0.4922, -1.5829, 1.5453, 0.7918, 1.5829, 1.7644, 0.0002, 1.5829, 1.8339, 0.0011, 1.5829, 1.7094, -0.4591, 1.5829, 1.7094, -0.4591, 1.5829, 1.8339, 0.0011, 1.5829, 1.7763, -0.491, 1.5829, 1.5176, 0.7329, 1.5829, 1.5495, 0.7967, -1.5829, 1.5176, 0.7329, -1.5829, 1.5176, 0.7329, 1.5829, 1.5495, 0.7967, -1.5829, 1.5495, 0.7967, -1.5829, 1.7094, -0.4591, -1.5829, 1.7763, -0.491, -1.5829, 1.7644, 0.0002, -1.5829, 1.7644, 0.0002, -1.5829, 1.7763, -0.491, -1.5829, 1.8339, 0.0011, 1.5829, 1.6968, 0.4877, 1.5829, 1.7639, 0.4922, -1.5829, 1.6968, 0.4877, -1.5829, 1.6968, 0.4877, 1.5829, 1.7639, 0.4922, -1.5829, 1.7639, 0.4922, 1.5829, 1.7094, -0.4591, 1.5829, 1.7763, -0.491, -1.5829, 1.7094, -0.4591, -1.5829, 1.7094, -0.4591, 1.5829, 1.7763, -0.491, -1.5829, 1.7763, -0.491, -1.5829, 1.5163, -0.7437, -1.5829, 1.5541, -0.8006, -1.5829, 1.7083, -0.4659, -1.5829, 1.7083, -0.4659, -1.5829, 1.5541, -0.8006, -1.5829, 1.77, -0.4899, -1.5829, 1.6977, 0.4866, -1.5829, 1.771, 0.4879, 1.5829, 1.6977, 0.4866, 1.5829, 1.6977, 0.4866, -1.5829, 1.771, 0.4879, 1.5829, 1.771, 0.4879, 1.5829, 1.7657, 0.0046, 1.5829, 1.8339, 0.0038, -1.5829, 1.7657, 0.0046, -1.5829, 1.7657, 0.0046, 1.5829, 1.8339, 0.0038, -1.5829, 1.8339, 0.0038, -1.5829, 1.7657, 0.0046, -1.5829, 1.8339, 0.0038, -1.5829, 1.6977, 0.4866, -1.5829, 1.6977, 0.4866, -1.5829, 1.8339, 0.0038, -1.5829, 1.771, 0.4879, -1.5829, 1.1768, 0.9023, -1.5829, 1.1757, 0.9837, 1.5829, 1.1768, 0.9023, 1.5829, 1.1768, 0.9023, -1.5829, 1.1757, 0.9837, 1.5829, 1.1757, 0.9837, 1.5829, 1.1705, 0.9124, 1.5829, 1.1705, 0.9837, -1.5829, 1.1705, 0.9124, -1.5829, 1.1705, 0.9124, 1.5829, 1.1705, 0.9837, -1.5829, 1.1705, 0.9837, 1.5829, 1.182, -0.91, 1.5829, 1.1757, -0.9815, -1.5829, 1.182, -0.91, -1.5829, 1.182, -0.91, 1.5829, 1.1757, -0.9815, -1.5829, 1.1757, -0.9815, -1.5829, 1.1757, -0.9101, -1.5829, 1.1757, -0.9815, 1.5829, 1.1757, -0.9101, 1.5829, 1.1757, -0.9101, -1.5829, 1.1757, -0.9815, 1.5829, 1.1757, -0.9815, -1.5921, 0.8051, -0.9101, -1.5921, 0.8051, -0.9815, -1.5829, 1.1757, -0.9101, -1.5829, 1.1757, -0.9101, -1.5921, 0.8051, -0.9815, -1.5829, 1.1757, -0.9815, -1.5829, 1.4934, -0.7485, -1.5829, 1.5495, -0.8094, 1.5829, 1.4934, -0.7485, 1.5829, 1.4934, -0.7485, -1.5829, 1.5495, -0.8094, 1.5829, 1.5495, -0.8094, 1.5921, 0.8051, -0.9101, 1.5921, 0.8051, -0.9815, -1.5921, 0.8051, -0.9101, -1.5921, 0.8051, -0.9101, 1.5921, 0.8051, -0.9815, -1.5921, 0.8051, -0.9815, -1.5829, 1.7083, -0.4659, -1.5829, 1.77, -0.4899, 1.5829, 1.7083, -0.4659, 1.5829, 1.7083, -0.4659, -1.5829, 1.77, -0.4899, 1.5829, 1.77, -0.4899, -0.1734, 0.8746, 1.0152, -0.1734, 0.8746, 0.8761, -0.125, 0.964, 1.0152, -0.125, 0.964, 1.0152, -0.1734, 0.8746, 0.8761, -0.125, 0.964, 0.8761, 0, 0.5497, 1.0152, 0, 0.5497, 0.8761, -0.0933, 0.5497, 1.0152, -0.0933, 0.5497, 1.0152, 0, 0.5497, 0.8761, -0.0933, 0.5497, 0.8761, -0.0933, 0.5497, 1.0152, -0.0933, 0.5497, 0.8761, -0.1734, 0.8746, 1.0152, -0.1734, 0.8746, 1.0152, -0.0933, 0.5497, 0.8761, -0.1734, 0.8746, 0.8761, -0.125, 0.964, 1.0152, -0.125, 0.964, 0.8761, 0, 0.9859, 1.0152, 0, 0.9859, 1.0152, -0.125, 0.964, 0.8761, 0, 0.9859, 0.8761, 0, 0.8746, 1.0152, -0.1734, 0.8746, 1.0152, 0, 0.9859, 1.0152, 0, 0.9859, 1.0152, -0.1734, 0.8746, 1.0152, -0.125, 0.964, 1.0152, 0, 0.5497, 1.0152, -0.0933, 0.5497, 1.0152, 0, 0.8746, 1.0152, 0, 0.8746, 1.0152, -0.0933, 0.5497, 1.0152, -0.1734, 0.8746, 1.0152, 0.051, 0.7957, -1.0006, 0.051, 1.1864, -1.0025, -0.051, 0.7957, -1.0006, -0.051, 0.7957, -1.0006, 0.051, 1.1864, -1.0025, -0.051, 1.1864, -1.0025, 0.051, 1.8493, -0.0001, 0.051, 1.7839, 0.4998, -0.051, 1.8493, -0.0001, -0.051, 1.8493, -0.0001, 0.051, 1.7839, 0.4998, -0.051, 1.7839, 0.4998, 0.051, 1.7839, 0.4998, 0.051, 1.5578, 0.8106, -0.051, 1.7839, 0.4998, -0.051, 1.7839, 0.4998, 0.051, 1.5578, 0.8106, -0.051, 1.5578, 0.8106, 0.051, 1.5578, 0.8106, 0.051, 1.1774, 1.0017, -0.051, 1.5578, 0.8106, -0.051, 1.5578, 0.8106, 0.051, 1.1774, 1.0017, -0.051, 1.1774, 1.0017, 0.051, 1.1774, 1.0017, 0.051, 0.7848, 1.0084, -0.051, 1.1774, 1.0017, -0.051, 1.1774, 1.0017, 0.051, 0.7848, 1.0084, -0.051, 0.7848, 1.0084, 0.051, 1.7908, -0.4972, 0.051, 1.8493, -0.0001, -0.051, 1.7908, -0.4972, -0.051, 1.7908, -0.4972, 0.051, 1.8493, -0.0001, -0.051, 1.8493, -0.0001, 0.051, 1.561, -0.8156, 0.051, 1.7908, -0.4972, -0.051, 1.561, -0.8156, -0.051, 1.561, -0.8156, 0.051, 1.7908, -0.4972, -0.051, 1.7908, -0.4972, 0.051, 1.1864, -1.0025, 0.051, 1.561, -0.8156, -0.051, 1.1864, -1.0025, -0.051, 1.1864, -1.0025, 0.051, 1.561, -0.8156, -0.051, 1.561, -0.8156, -0.0504, 1.1559, 0.8996, -0.051, 1.1774, 1.0017, -0.0504, 0.7909, 0.9074, -0.0504, 0.7909, 0.9074, -0.051, 1.1774, 1.0017, -0.051, 0.7848, 1.0084, -0.0504, 1.6935, 0.4592, -0.051, 1.7839, 0.4998, -0.0504, 1.4941, 0.7247, -0.0504, 1.4941, 0.7247, -0.051, 1.7839, 0.4998, -0.051, 1.5578, 0.8106, -0.0504, 1.1685, -0.9015, -0.051, 1.1864, -1.0025, -0.0504, 1.5091, -0.739, -0.0504, 1.5091, -0.739, -0.051, 1.1864, -1.0025, -0.051, 1.561, -0.8156, -0.0504, 1.7069, -0.4492, -0.051, 1.7908, -0.4972, -0.0504, 1.7537, -0.0013, -0.0504, 1.7537, -0.0013, -0.051, 1.7908, -0.4972, -0.051, 1.8493, -0.0001, -0.0504, 0.8026, -0.8997, -0.051, 0.7957, -1.0006, -0.0504, 1.1685, -0.9015, -0.0504, 1.1685, -0.9015, -0.051, 0.7957, -1.0006, -0.051, 1.1864, -1.0025, -0.0504, 1.4941, 0.7247, -0.051, 1.5578, 0.8106, -0.0504, 1.1559, 0.8996, -0.0504, 1.1559, 0.8996, -0.051, 1.5578, 0.8106, -0.051, 1.1774, 1.0017, -0.0504, 1.7537, -0.0013, -0.051, 1.8493, -0.0001, -0.0504, 1.6935, 0.4592, -0.0504, 1.6935, 0.4592, -0.051, 1.8493, -0.0001, -0.051, 1.7839, 0.4998, -0.0504, 0.8026, -0.8997, 0.0504, 0.8026, -0.8997, -0.051, 0.7957, -1.0006, -0.051, 0.7957, -1.0006, 0.0504, 0.8026, -0.8997, 0.051, 0.7957, -1.0006, -0.0504, 1.5091, -0.739, -0.051, 1.561, -0.8156, -0.0504, 1.7069, -0.4492, -0.0504, 1.7069, -0.4492, -0.051, 1.561, -0.8156, -0.051, 1.7908, -0.4972, -0.7612, 0.8022, -0.9897, -0.7612, 1.1886, -0.9916, -0.8383, 0.8022, -0.9897, -0.8383, 0.8022, -0.9897, -0.7612, 1.1886, -0.9916, -0.8383, 1.1886, -0.9916, -0.7612, 1.8443, -0.0001, -0.7612, 1.7796, 0.4943, -0.8383, 1.8443, -0.0001, -0.8383, 1.8443, -0.0001, -0.7612, 1.7796, 0.4943, -0.8383, 1.7796, 0.4943, -0.7612, 1.7796, 0.4943, -0.7612, 1.5559, 0.8018, -0.8383, 1.7796, 0.4943, -0.8383, 1.7796, 0.4943, -0.7612, 1.5559, 0.8018, -0.8383, 1.5559, 0.8018, -0.7612, 1.5559, 0.8018, -0.7612, 1.1797, 0.9908, -0.8383, 1.5559, 0.8018, -0.8383, 1.5559, 0.8018, -0.7612, 1.1797, 0.9908, -0.8383, 1.1797, 0.9908, -0.7612, 1.1797, 0.9908, -0.7612, 0.7914, 0.9974, -0.8383, 1.1797, 0.9908, -0.8383, 1.1797, 0.9908, -0.7612, 0.7914, 0.9974, -0.8383, 0.7914, 0.9974, -0.7612, 1.7864, -0.4918, -0.7612, 1.8443, -0.0001, -0.8383, 1.7864, -0.4918, -0.8383, 1.7864, -0.4918, -0.7612, 1.8443, -0.0001, -0.8383, 1.8443, -0.0001, -0.7612, 1.5591, -0.8067, -0.7612, 1.7864, -0.4918, -0.8383, 1.5591, -0.8067, -0.8383, 1.5591, -0.8067, -0.7612, 1.7864, -0.4918, -0.8383, 1.7864, -0.4918, -0.7612, 1.1886, -0.9916, -0.7612, 1.5591, -0.8067, -0.8383, 1.1886, -0.9916, -0.8383, 1.1886, -0.9916, -0.7612, 1.5591, -0.8067, -0.8383, 1.5591, -0.8067, -0.7612, 0.8026, -0.8997, -0.7612, 0.8022, -0.9897, -0.8383, 0.8026, -0.8997, -0.8383, 0.8026, -0.8997, -0.7612, 0.8022, -0.9897, -0.8383, 0.8022, -0.9897, -0.7612, 1.7069, -0.4492, -0.7612, 1.7864, -0.4918, -0.7612, 1.5091, -0.739, -0.7612, 1.5091, -0.739, -0.7612, 1.7864, -0.4918, -0.7612, 1.5591, -0.8067, -0.8383, 1.1559, 0.8996, -0.8383, 1.1797, 0.9908, -0.8383, 0.7909, 0.9074, -0.8383, 0.7909, 0.9074, -0.8383, 1.1797, 0.9908, -0.8383, 0.7914, 0.9974, -0.7612, 1.1685, -0.9015, -0.7612, 1.1886, -0.9916, -0.7612, 0.8026, -0.8997, -0.7612, 0.8026, -0.8997, -0.7612, 1.1886, -0.9916, -0.7612, 0.8022, -0.9897, -0.7612, 0.7909, 0.9074, -0.7612, 0.7914, 0.9974, -0.7612, 1.1559, 0.8996, -0.7612, 1.1559, 0.8996, -0.7612, 0.7914, 0.9974, -0.7612, 1.1797, 0.9908, -0.8383, 1.6935, 0.4592, -0.8383, 1.7796, 0.4943, -0.8383, 1.4941, 0.7247, -0.8383, 1.4941, 0.7247, -0.8383, 1.7796, 0.4943, -0.8383, 1.5559, 0.8018, -0.8383, 1.1685, -0.9015, -0.8383, 1.1886, -0.9916, -0.8383, 1.5091, -0.739, -0.8383, 1.5091, -0.739, -0.8383, 1.1886, -0.9916, -0.8383, 1.5591, -0.8067, -0.7612, 1.4941, 0.7247, -0.7612, 1.5559, 0.8018, -0.7612, 1.6935, 0.4592, -0.7612, 1.6935, 0.4592, -0.7612, 1.5559, 0.8018, -0.7612, 1.7796, 0.4943, -0.7612, 1.5091, -0.739, -0.7612, 1.5591, -0.8067, -0.7612, 1.1685, -0.9015, -0.7612, 1.1685, -0.9015, -0.7612, 1.5591, -0.8067, -0.7612, 1.1886, -0.9916, -0.8383, 0.7909, 0.9074, -0.8383, 0.7914, 0.9974, -0.7612, 0.7909, 0.9074, -0.7612, 0.7909, 0.9074, -0.8383, 0.7914, 0.9974, -0.7612, 0.7914, 0.9974, -0.8383, 1.7069, -0.4492, -0.8383, 1.7864, -0.4918, -0.8383, 1.7537, -0.0013, -0.8383, 1.7537, -0.0013, -0.8383, 1.7864, -0.4918, -0.8383, 1.8443, -0.0001, -0.8383, 0.8026, -0.8997, -0.8383, 0.8022, -0.9897, -0.8383, 1.1685, -0.9015, -0.8383, 1.1685, -0.9015, -0.8383, 0.8022, -0.9897, -0.8383, 1.1886, -0.9916, -0.7612, 1.7537, -0.0013, -0.7612, 1.8443, -0.0001, -0.7612, 1.7069, -0.4492, -0.7612, 1.7069, -0.4492, -0.7612, 1.8443, -0.0001, -0.7612, 1.7864, -0.4918, -0.8383, 1.4941, 0.7247, -0.8383, 1.5559, 0.8018, -0.8383, 1.1559, 0.8996, -0.8383, 1.1559, 0.8996, -0.8383, 1.5559, 0.8018, -0.8383, 1.1797, 0.9908, -0.8383, 1.7537, -0.0013, -0.8383, 1.8443, -0.0001, -0.8383, 1.6935, 0.4592, -0.8383, 1.6935, 0.4592, -0.8383, 1.8443, -0.0001, -0.8383, 1.7796, 0.4943, -0.7612, 1.1559, 0.8996, -0.7612, 1.1797, 0.9908, -0.7612, 1.4941, 0.7247, -0.7612, 1.4941, 0.7247, -0.7612, 1.1797, 0.9908, -0.7612, 1.5559, 0.8018, -0.7612, 1.6935, 0.4592, -0.7612, 1.7796, 0.4943, -0.7612, 1.7537, -0.0013, -0.7612, 1.7537, -0.0013, -0.7612, 1.7796, 0.4943, -0.7612, 1.8443, -0.0001, -0.8383, 1.5091, -0.739, -0.8383, 1.5591, -0.8067, -0.8383, 1.7069, -0.4492, -0.8383, 1.7069, -0.4492, -0.8383, 1.5591, -0.8067, -0.8383, 1.7864, -0.4918, -1.5116, 0.9079, 0.9278, -1.5116, -0.2423, 0.9278, -1.5116, 0.9079, -0.9085, -1.5116, 0.9079, -0.9085, -1.5116, -0.2423, 0.9278, -1.5116, -0.2423, -0.9085, -1.5116, 0.9079, -0.9085, -1.5116, -0.2423, -0.9085, 1.4999, 0.9079, -0.9085, 1.4999, 0.9079, -0.9085, -1.5116, -0.2423, -0.9085, 1.4999, -0.2423, -0.9085, 1.4999, 0.9079, -0.9085, 1.4999, -0.2423, -0.9085, 1.4999, 0.9079, 0.9278, 1.4999, 0.9079, 0.9278, 1.4999, -0.2423, -0.9085, 1.4999, -0.2423, 0.9278, 1.4999, 0.9079, 0.9278, 1.4999, -0.2423, 0.9278, -1.5116, 0.9079, 0.9278, -1.5116, 0.9079, 0.9278, 1.4999, -0.2423, 0.9278, -1.5116, -0.2423, 0.9278 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 21.3103, 13.8657, 15.813 )

[sub_resource type="ConcavePolygonShape" id=4]
data = PoolVector3Array( -1, 1, 1, 1, 1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, 1, 1, 1, -1, -1, 1, 1, -1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, -1, -1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1 )

[node name="ChestArea" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.686517, 0 )
script = ExtResource( 1 )

[node name="Chest" type="MeshInstance" parent="."]
transform = Transform( -6.51683e-07, 0, -4, 0, 4, 0, 4, 0, -6.51683e-07, 0, 1.26233, 0 )
mesh = ExtResource( 3 )
material/0 = SubResource( 1 )

[node name="StaticBody" type="StaticBody" parent="Chest"]

[node name="CollisionShape" type="CollisionShape" parent="Chest/StaticBody"]
shape = SubResource( 2 )

[node name="InteractArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -12.1415, 0, 0 )

[node name="InteractAreaCollision" type="CollisionShape" parent="InteractArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.71906, 11.1284, 0 )
shape = SubResource( 3 )
disabled = true

[node name="Lanterna1" parent="." instance=ExtResource( 4 )]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 4, 41.847, 0, -29.6152 )

[node name="OmniLight" type="OmniLight" parent="Lanterna1"]
transform = Transform( 0.25, 0, 0, 0, -4.07302e-08, -0.25, 0, 0.25, -4.07302e-08, 0.00109673, 4.45363, -0.00166798 )
visible = false
light_color = Color( 1, 0, 0, 1 )
light_energy = 5.0
omni_range = 62.0261
omni_attenuation = 0.554785

[node name="Lanterna2" parent="." instance=ExtResource( 4 )]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 4, 41.847, 0, 28.683 )

[node name="OmniLight2" type="OmniLight" parent="Lanterna2"]
transform = Transform( 0.25, 0, 0, 0, -4.07302e-08, -0.25, 0, 0.25, -4.07302e-08, 0.00109673, 4.22296, -0.0148535 )
visible = false
light_color = Color( 1, 0, 0, 1 )
light_energy = 5.0
omni_range = 62.0
omni_attenuation = 0.554785

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 4.50045, 0, 0, 0, 13.1898, 0, 0, 0, 6.47743, 0, 4.59425, 0 )

[node name="StaticBody" type="StaticBody" parent="MeshInstance"]

[node name="CollisionShape" type="CollisionShape" parent="MeshInstance/StaticBody"]
shape = SubResource( 4 )

[node name="sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -15.0
bus = "SFX"
[connection signal="body_entered" from="InteractArea" to="." method="_on_InteractArea_body_entered"]
[connection signal="body_exited" from="InteractArea" to="." method="_on_InteractArea_body_exited"]
